--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
               <div class="card-custom rounded-4 bg-card shadow-effect">
                 <div class="card-custom-image rounded-4">
-                  <img class="rounded-4" src="./assets/img/award-10.jpg" />
+                  <img class="rounded-4" src="./assets/img/award-10.JPG" />
                 </div>
                 <div class="card-custom-content p-4">
                   <h4>
