Add Responsive Web Design certificate

--- a/index.html
+++ b/index.html
@@ -586,6 +586,16 @@
             <div class="col-md-4" data-aos="fade-up">
               <div class="card-custom rounded-4 bg-card shadow-effect">
                 <div class="card-custom-image rounded-4">
+                  <img class="rounded-4" src="./assets/img/certificate-6.png" />
+                </div>
+                <div class="card-custom-content p-4">
+                  <h4>Responsive Web Design Certification</h4>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4" data-aos="fade-up">
+              <div class="card-custom rounded-4 bg-card shadow-effect">
+                <div class="card-custom-image rounded-4">
                   <img class="rounded-4" src="./assets/img/certificate-5.png" />
                 </div>
                 <div class="card-custom-content p-4">
